Flare v1.09 (WIP)

Engine features:

* Loot tooltips can now be hidden when entities are near pieces of loot. The setting "hide_radius" has been added to engine/loot.txt to control this.
* Overhead markers are now displayed for entities that are obscured by tall tiles.
* Dialog options are no longer shown in a separate menu, but are instead part of the main dialog window.
* Added support for dialog responses. For any line of dialog, a list of response topics can be given.
* Add 'save_pos_onexit' to engine/misc.txt for saving the player's current position upon exiting.
* Added 'colorblind_highlight_offset' and listbox 'text_margin' to engine/widget_settings.txt.
* Added a compass to the minimap.
* Moved several interface options to the actionbar. Loot tooltips, combat text, statbar labels, and mini-map mode can be adjusted.
* Moved the interface option for automatically equipping items to the Inventory menu.
* Add 'toggle_fps' to the developer console commands.
* Added a 2x zoom mode for the mini-map.
* Add a video setting to disable parallax layers.
* Add ability to use icons in books.

Engine fixes:
* Fixed shrinking tab widgets when widow was resized.
* Remove broken 'font_fallback' from engine/font_settings.txt.
* Add tooltips to language list to show language codes.
* Make strings related to elements more translator-friendly.
* Fixed a bug where looped map sounds wouldn't play if the player entered the map with a sound volume of 0, but later raised the volume.
* Redesigned mouse movement to use the secondary button (right mouse) for movement.
* Fix buttons and checkboxes not handling clicks while the "Accept" key is pressed.
* Fix incorrect descriptions of controls on mobile devices.
* Add renderer support for batching calls to local pixel drawing. This speeds up the pre-render of the minimap.
* Widgets that use custom images can now fall back to the default image if the custom image is missing (instead of exiting in failure).