@@ -1259,6 +1259,8 @@ body {
 
 <p><strong>text.text_font</strong> | <code>color, string : Font color, Font style</code> | Font color and style.</p>
 
+<p><strong>text.shadow</strong> | <code>bool</code> | If true, the text will have a black shadow like the text labels in various menus.</p>
+
 <p><strong>text.text</strong> | <code>string</code> | The text to be displayed.</p>
 
 <p><strong>text.requires_status</strong> | <code>list(string)</code> | Text requires these campaign statuses in order to be visible.</p>
