@@ -2,6 +2,7 @@ Flare v1.09 (WIP)
 
 Engine features:
 
+* Redesigned mouse movement to use the secondary button (right mouse) for movement.
 * Loot tooltips can now be hidden when entities are near pieces of loot. The setting "hide_radius" has been added to engine/loot.txt to control this.
 * Overhead markers are now displayed for entities that are obscured by tall tiles.
 * Dialog options are no longer shown in a separate menu, but are instead part of the main dialog window.
@@ -15,6 +16,7 @@ Engine features:
 * Added a 2x zoom mode for the mini-map.
 * Add a video setting to disable parallax layers.
 * Add ability to use icons in books.
+* Add support for shadows on book text via 'text_shadow'.
 
 Engine fixes:
 * Fixed shrinking tab widgets when widow was resized.
@@ -22,7 +24,6 @@ Engine fixes:
 * Add tooltips to language list to show language codes.
 * Make strings related to elements more translator-friendly.
 * Fixed a bug where looped map sounds wouldn't play if the player entered the map with a sound volume of 0, but later raised the volume.
-* Redesigned mouse movement to use the secondary button (right mouse) for movement.
 * Fix buttons and checkboxes not handling clicks while the "Accept" key is pressed.
 * Fix incorrect descriptions of controls on mobile devices.
 * Add renderer support for batching calls to local pixel drawing. This speeds up the pre-render of the minimap.
